# sim

./: Cargo.toml  config.json  plot_graph.sh  plot_real.sh  plot_simulated.sh  script_cdf.sh
src/: main copy.bkp  main copy.rs  main.rs  main_not_.wokring  request.rs  worker_core.rs
