[package]
name = "sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
arrayvec = "0.7.4"
indicatif = "0.17.5"
rustc-serialize = "0.3.24"
rand = { version = "0.8.5", features = ["small_rng"] }